@@ -1,5 +1,12 @@
 2011-09-19  Gavin Barraclough  <barraclough@apple.com>
 
+        Errrk, missed stylebot comments in last commit.
+
+        * runtime/StringPrototype.cpp:
+        (JSC::stringProtoFuncSplit):
+
+2011-09-19  Gavin Barraclough  <barraclough@apple.com>
+
         String#split is buggy
         https://bugs.webkit.org/show_bug.cgi?id=68348
 
